Fri Aug  8 16:30:11 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/examples/Notify/Federation/Agent/Agent.cpp:
          Removed deprecated RefCountServantBase

Fri Aug  8 15:25:13 UTC 2008  Adam Mitz  <mitza@ociweb.com>

        * tao/Transport_Cache_Manager.cpp:

          Fixed whitespace.

        * tao/Transport_Connector.cpp:

          Add the transport to the cache (ENTRY_CONNECTING) in the non-blocked
          case.  This covers non-blocking invocations such as AMI and oneways
          with SYNC_NONE, etc.

Fri Aug  8 14:47:42 UTC 2008  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tao/RTCORBA/RT_Invocation_Endpoint_Selectors.cpp:

          Reverted the change in

          Wed Aug  6 19:08:39 UTC 2008  Jeff Parsons <j.parsons@vanderbilt.edu>

          since it seems to have caused a test failure.

Fri Aug  8 14:22:01 UTC 2008  Adam Mitz  <mitza@ociweb.com>

        * tests/Bug_3068_Regression/test_i.h:
        * tests/Bug_3068_Regression/test_i.inl:

          Removed a deprecated macro; cleaned up whitespace.

Fri Aug  8 14:08:58 UTC 2008  Adam Mitz  <mitza@ociweb.com>

        * tests/Bug_3068_Regression/Bug_3068_Regression.mpc:
        * tests/Bug_3068_Regression/test.idl:
        * tests/Bug_3068_Regression/test_i.h:

          Addressed "fuzz" errors.

Fri Aug  8 12:10:12 UTC 2008  Adam Mitz  <mitza@ociweb.com>

        * tests/Nested_Event_Loop/test_i.cpp:

          Fixed a compile error in CORBA/e compact and micro builds.

Thu Aug  7 23:19:55 UTC 2008  Yan Dai  <dai_y@ociweb.com>

        * tests/Nested_Event_Loop/client.cpp:
        * tests/Nested_Event_Loop/test_i.h:
        * tests/Nested_Event_Loop/test_i.cpp:

          Made client servant explicitly activated for CORBA e build
          since CORBA e does not allow implicit servant activation. This
          should fix test failure due to WrongPolicy exception.

Thu Aug  7 21:30:32 UTC 2008  Adam Mitz  <mitza@ociweb.com>

        * tests/Bug_3068_Regression:
